@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fix bug where `cargo` might not be in PATH if Alien::cargo
+    is a `share` install. (gh#2)
 
 0.01      2024-11-23 19:32:38 -0700
   - initial version
